发布游戏，游戏列表

--- a/editor.html
+++ b/editor.html
@@ -77,7 +77,7 @@
             </div>
             <div class="item_from mb20 clearfix">
                 <label class="atr fl mr20 txt-333">昵称:</label>
-                <p class="fl"><span id="user-name"></span><span class="txt-blue ml10">修改</span></p>
+                <p class="fl"><span id="user-name"></span><input type="text" id="set_user_name"><span class="txt-blue ml10 pointer" id="set_user_name_btn">修改</span></p>
             </div>
             <div class="item_from mb20 clearfix">
                 <label class="atr fl mr20 txt-333">性别:</label>
@@ -203,12 +203,8 @@
                     <select value="" class="selectbox radius-2" datatype="*" id="region-1">
                     </select>
                     <select class="selectbox ml10 radius-2" datatype="*" id="region-2">
-                        <option value="">省</option>
-                        <option value="44">北京</option>
                     </select>
                     <select class="selectbox ml10 radius-2" datatype="*" id="region-3">
-                        <option value="">市</option>
-                        <option value="42">北京</option>
                     </select>
                 </div>
             </div>
