详情页修改

--- a/trial_details.html
+++ b/trial_details.html
@@ -10,9 +10,11 @@
     <link type="text/css" rel="stylesheet" href="css/select2.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="iconfont/iconfont.css">
+    <link rel="stylesheet" href="./css/functions.css">
     <script type="text/javascript" src="js/jquery1.91.min.js"></script>
     <script type="text/javascript" src="js/select2.min.js"></script>
     <script type="text/javascript" src="js/jquery.SuperSlide.2.1.js"></script>
+    <script src='./js/functions.min.js'></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script src="js/view/trial_details.js"></script>
     <style>
