首页筛选功能参数增加，游戏详情页评测和回复功能，页面滚动加载功能

--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
                     <option value="1.06">开放世界</option>
                 </select>
                 <select class="select time" style="width:100px;">
-                    <option value="1">时间</option>
-                    <option value="1.01">今天</option>
-                    <option value="1.02">一周内</option>
-                    <option value="1.03">一月内</option>
-                    <option value="1.04">一年内</option>
-                    <option value="1.05">一年前</option>
+                    <option value="0">时间</option>
+                    <option value="1">今天</option>
+                    <option value="2">一周内</option>
+                    <option value="3">一月内</option>
+                    <option value="4">一年内</option>
+                    <option value="5">一年前</option>
                 </select>
-                <div class="sort">
-                    <!--降序样式 cur ；升序样式 cur_f ； 非当前则没有cur或cur_f-->
-                    <a href="###" class="fl ease-1 cur" title="销量"><span>销 量</span><i class="icon iconfont icon_up">&#xe6b0;</i><i class="icon iconfont icon_down">&#xe6aa;</i></a>
-                </div>
+                <!--<div class="sort">-->
+                    <!--&lt;!&ndash;降序样式 cur ；升序样式 cur_f ； 非当前则没有cur或cur_f&ndash;&gt;-->
+                    <!--<a href="###" class="fl ease-1 cur" title="销量"><span>销 量</span><i class="icon iconfont icon_up">&#xe6b0;</i><i class="icon iconfont icon_down">&#xe6aa;</i></a>-->
+                <!--</div>-->
             </div>
             <div class="filter_list">
                 <ul>
