--- a/trial_details.html
+++ b/trial_details.html
@@ -17,7 +17,7 @@
     <script src="js/view/trial_details.js"></script>
     <style>
         .dialog {
-            /*display: none;*/
+            display: none;
             position: fixed;
             top: 0;
             left: 0;
