--- a/register-02.html
+++ b/register-02.html
@@ -61,7 +61,7 @@
                     </li>
                     <li class="nLi"><h3><a class="ease-1" href="found_friend.html"><span>发现朋友</span></a></h3>
                     </li>
-                    <li class="nLi"><h3><a class="ease-1" href="javascript:;"><span>客服</span></a></h3>
+                    <li class="nLi"><h3><a class="ease-1" href="customerService.html"><span>客服</span></a></h3>
                     </li>
                     </li>
                 </ul>
