--- a/register.html
+++ b/register.html
@@ -40,10 +40,7 @@
                         <li class="nLi">
                             <h3><a class="ease-1" href="found_friend.html"><span>发现朋友</span></a></h3>
                         </li>
-                        <li class="nLi">
-                            <h3><a class="ease-1" href="javascript:;"><span>客服</span></a></h3>
-                        </li>
-                        </li>
+                        <li class="nLi"><h3><a class="ease-1" href="customerService.html"><span>客服</span></a></h3>
                     </ul>
                 </div>
             </div>
