--- a/player_information.html
+++ b/player_information.html
@@ -55,9 +55,7 @@
                     <li class="nLi on">
                         <h3><a class="ease-1" href="found_friend.html"><span>发现朋友</span></a></h3>
                     </li>
-                    <li class="nLi">
-                        <h3><a class="ease-1" href="javascript:;"><span>客服</span></a></h3>
-                    </li>
+                    <li class="nLi"><h3><a class="ease-1" href="customerService.html"><span>客服</span></a></h3>
                     </li>
                 </ul>
             </div>
