客服添加文字

--- a/customerService.html
+++ b/customerService.html
@@ -120,28 +120,67 @@
         <header>账号解决方案</header>
         <div class="problem-content">
             <h4>忘记登陆密码怎么办？</h4>
-            <p>在登陆页面</p>
+            <p>在登录页面，点击 忘记密码 ，按提示操作即可重新设置登陆密码。</p>
+            <h4>注册账号时应该注意什么？</h4>
+            <p>· 邮箱地址：填写真实有效的邮箱地址，此邮箱用于找回密码，收取通知邮件。<br>
+                · 密码设置：勿用纯数字或者简单密码，以防账号被盗，权益受损。</p>
+            <h4>忘记登陆密码怎么办？</h4>
+            <p>当用户违规或者账号有异常登陆情况时，系统会冻结账号。<br>
+                账号被冻结后，请先仔细回想您的账号使用情况，认真阅读 GameHub 的服务条款，<br>
+                如果您意识到自己的行为对GameHub及其他用户产生的危害，可以通过“联系我们”注明的联系方式，<br>
+                向我们的客服提交解冻申请，我们会根据违规行为的严重程度和用户的态度进行相应的处理和处罚。<br>
+                最终的处罚和处理由GameHub决定。</p>
+            <h4>忘记登陆密码怎么办？</h4>
+            <p>按照我们的安全设置，您账户内的收款信息是不能被修改的，故对方即使申请提现，也只能提现到您设置的帐号内；<br>
+                同时，如果您的身份信息已认证，所有资料都将为不可修改，故对方即使兑换奖品，也只能寄往您设置的地址 。<br>
+                发现自己的账户异常时，及时修改自己的登陆密码即可。</p>
         </div>
     </div>
     <div class="problem-item">
-        <header>账号解决方案</header>
+        <header>举报</header>
         <div class="problem-content">
-            <h4>忘记登陆密码怎么办？</h4>
-            <p>在登陆页面</p>
+            <h4>一、受理范围 </h4>
+            <p>1、利用本平台发布违规低质内容(试玩、想法)的； <br>
+                        2、故意制作、传播计算机病毒等破坏性程序，攻击计算机系统及通信网络，致使计算机系统及通信网络遭受损害； <br>
+                        3、利用本平台捏造或者歪曲事实、散布谣言，扰乱社会秩序的；<br>
+                        4、利用本平台建立淫秽色情网站、网页，提供淫秽站点链接，传播淫秽色情信息，组织网上淫秽色情的；  <br>
+                        5、利用本平台进行诈骗、侵犯别人合法权益的；<br>
+                        6、故意发布低俗、恶意辱骂别人的言论(评测、回复等)</p>
+            <h4>二、提交举报 </h4>
+            <p> 你应保证你的举报行为基于善意、并代表你的真实意愿。<br>
+                        平台提供玩家举报功能、用户注册登录后可点击举报功能举报非法的言论、信息(试玩、想法、评测、回复等)。 <br>
+                后台管理员会查看玩家的举报信息并对涉嫌违规的玩家进行封号、注销等处理。<br>
+                本网站会对举报人进行信息保护(不涉及个人隐私)；除法律法规规定的情况外、未经用户许可本平台不会向第三方公开、透露你的个人信息。<br>
+                欢迎各位玩家踊跃举报涉嫌违规的玩家，共同营造一个绿色健康、积极向上的游戏论坛环境</p>
         </div>
     </div>
     <div class="problem-item">
-        <header>账号解决方案</header>
+        <header>权益相关</header>
         <div class="problem-content">
-            <h4>忘记登陆密码怎么办？</h4>
-            <p>在登陆页面</p>
+            <h4>第一条</h4>
+            <p>GameHub论坛用户人人平等。</p>
+            <h4>第二条</h4>
+            <p>用户应当对以其用户帐号进行的所有活动和事件负法律责任；论坛用户应遵守中华人民共和国法律、法规，自行承担一切可能因论坛活动直接或间接引起的法律责任。</p>
+            <h4>第三条</h4>
+            <p>用户帐号和密码由用户负责保管；用户不应将其帐号、密码转让或出借予他人使用。如用户发现其帐号遭他人非法使用，应立即通知GameHub论坛管理员。因黑客行为或用户的保管疏忽导致帐号、密码遭他人非法使用，GameHub不承担任何责任。</p>
+            <h4>第四条</h4>
+            <p>用户有在论坛各正常版面发贴和读贴的权限，若版面中有特殊规定，或用户因受到处罚而关闭权限则例外。</p>
+            <h4>第五条</h4>
+            <p>论坛用户认为自己在论坛的权益受到侵害，有权根据论坛相关规定流程进行投诉申诉。论坛用户有权对GameHub论坛提出咨询、意见、建议，有权要求相应管理人员给予答复。</p>
+            <h4>第六条</h4>
+            <p>用户在使用论坛服务过程中，必须遵循以下原则：<br>
+                1. 遵守中国有关的法律和法规；<br>
+                2. 遵守所有与网络服务有关的网络协议、规定和程序；<br>
+                3. 遵守论坛管理规定以及其他规定；<br>
+                4. 不得为任何非法目的而使用论坛服务；<br>
+                5. 不得利用论坛服务进行任何可能对互联网或移动网正常运转造成不利影响的行为；</p>
         </div>
     </div>
 </div>
 <div class="Open-Customer-Service">
     <div class="center clearfix">
         <p class="fl">没有找到答案? 尝试与我们联系</p>
-        <div onclick="window.open('tencent://message/?uin=10987654321');" class="open-qq fr">联系我们</div>
+        <div onclick="window.open('tencent://message/?uin=1367505472');" class="open-qq fr">联系我们</div>
     </div>
 </div>
 <script>
